@@ -16,3 +16,14 @@ Other scripts:
 |----------------------|-------------|
 | aggregate_coverage.py | Used to create coverage reports that contain both unit and system tests data |
 | merge_pr | Used to make it easier to open a PR that merges one branch into another. |
+
+
+Import / export the dashboards of a single Beat:
+
+| File                  | Description |
+|-----------------------|-------------|
+| import_dashboards.sh  | Bash script to import the Beat dashboards from a local directory in Elasticsearch |
+| import_dashboards.ps1 | Powershell script to import the Beat dashboards from a local directory in Elasticsearch |
+| export_dashboards.py  | Python script to export the Beat dashboards from Elasticsearch to a local directory|
+
+
